--- a/scss/post.scss
+++ b/scss/post.scss
@@ -18,3 +18,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 .limitedwidth {
     min-width:100%!important
 }
+
+.committeeiconcontainer{
+    width: 100px;
+    height: 100px;
+}
+
+img.committeeicon{
+    width:100%;
+    height:100%;
+    border-radius: 100%;
+}
