--- a/templates/mainpage/jumbo.mustache
+++ b/templates/mainpage/jumbo.mustache
@@ -5,7 +5,7 @@
         {{/jumbomain}}
     </div>
     <div class="col col-lg-4 col-sm-12 col-12 main-page-col main-page-sec-col">
-        <h4 class="p-1 pt-2 m-0 main-page-section-title main-page-link">{{AnnouncementsHeading}}</h4>
+        <h4 class="p-1 pt-2 m-0 main-page-section-title main-page-link">Announcements</h4>
         <div class="main-page-announcements-cont">
             {{#jumboside}}
                 {{>theme_apoa/mainpage/jumbo/jumbosideitem}}
