--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -1,12 +1,31 @@
-<a class="stretched-link main-page-link-wrapper" href="#{{jumboLink}}"></a>
-<div class="card main-page-jumbo-main border-0 pr-lg-1"><video class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumboPlaceholder}}">
-        <source src="{{jumboVideo}}" type="video/webm">
+<a class="stretched-link main-page-link-wrapper" href="{{jumbourl}}"></a>
+<div class="card main-page-jumbo-main border-0 pr-lg-1">
+    <video class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobanner}}">
+        <source src="{{jumbobanner}}" type="video/webm">
     </video>
     <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
-        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-between"><img class="float-left main-page-jumbo-logo" src="assets/img/Logos/apoalogofulllight.png"><span class="float-right main-page-jumbo-title main-page-link">{{jumboTitle}}</span></h1>
-        <p class="text-right main-page-link mb-1 text-white">{{JumboDesc}}</p>
-        <div class="w-100 d-flex justify-content-end"><video class="main-page-jumbo-video main-page-jumbo-sub-video" width="560" height="315" poster="{{jumboSubPlaceholder}}" loop="" muted="" controls="">
-                <source src="{{jumboSubVideo}}" type="video/webm">
-            </video></div>
+        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
+            <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
+            <span class="float-right main-page-jumbo-title">
+                <span class="main-page-link">
+                    {{jumbotitle}}
+                </span>
+                <span class="br text-right main-page-link main-page-sub-card-text">
+                    {{jumbodescription}}
+                </span>
+                <span class="br text-right main-page-sub-card-text">
+                    <small class="main-page-link-sub">
+                        {{jumbotag}}
+                    </small>
+                </span>
+            </span>
+            </h1>
+            <div class="w-100 d-flex justify-content-end">
+                {{#jumbovideoflag}}
+                <video class="main-page-jumbo-video main-page-jumbo-sub-video" width="560" height="315" poster="{{jumboSubPlaceholder}}" loop="" muted="" controls="">
+                    <source src="{{jumbobanner}}" type="video/webm">
+                </video>
+                {{/jumbovideoflag}}
+            </div>
     </div>
 </div>
