--- a/scss/post.scss
+++ b/scss/post.scss
@@ -7,8 +7,8 @@ div.main-page-banner-logo{
 
 
 body{
-    font-family: 'Archivo', sans-serif !important;
-    font-weight: 500!important;
+    font-family: 'Karla', sans-serif !important;
+    font-weight: 400!important;
     --primary: #336667!important;
     --secondary: #D4D29E!important;
 }
