--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -4,9 +4,12 @@ $course-content-maxwidth: 90%!important;
 
 
 
-
 @font-face {
     font-family: 'Archivo' ,sans-serif;
     src: url('https://fonts.googleapis.com/css2?family=Archivo:wght@100&display=swap');
 }
 
+@font-face {
+    font-family: 'Karla', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+}
