--- a/templates/mainpage/sections.mustache
+++ b/templates/mainpage/sections.mustache
@@ -4,88 +4,8 @@
     </div>
     </div>
     <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/ankle.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 middle main-page-subsection-title main-page-link">Foot &amp; Ankle</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/hand.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Hand &amp; Upperlimb</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/hip.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Hip: APHS</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/infection.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Infection Section</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/knee.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Knee: APKS</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/research.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Orthopedic Research</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/apoffs-logo.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Osteoperosis</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/paediatrics.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Paediactrics: APPOS</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/spine.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Spine: APSS</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/sports.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Sports Section</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/trauma.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Trauma: APTS</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
-            <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/womens.png">
-                <div class="card-body py-0">
-                    <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Women's Advocacy</h5>
-                </div>
-            </div>
-        </div>
+        {{#sections}}
+            {{> theme_apoa/mainpage/sectionlogo}}
+        {{/sections}}
+        
     </div>
