--- a/templates/secondarynav.mustache
+++ b/templates/secondarynav.mustache
@@ -1,6 +1,6 @@
-<div class="container p-0 m-0 w-100" style="max-width: 100%!important;">
+<div class="container p-0 mb-1 mb-md-2 m-0 w-100" style="max-width: 100%!important;">
     <div class="row justify-content-start py-2 w-100 mx-0" style="height: 80px;color: var(--primary);background: var(--light);">
-        {{{output.context_header}}}
+        {{{output.context_header_cat}}}
     </div>
     <div class="row justify-content-start secondary-nav-cont px-0 w-100 mx-0" style="background: var(--primary);">
         <div class="col-xl-4 col-xl-12 px-0">
@@ -8,7 +8,7 @@
                 <div class="secondary-navigation d-print-none apoa-nav">
                     {{> core/moremenu}}
                 </div>
-                {{/secondarymoremenu}}
+            {{/secondarymoremenu}}
         </div>
     </div>
 </div>
