--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -6,7 +6,7 @@
                     <div class="card-img-overlay main-page-card">
                         <h5 class="main-page-announcements-title main-page-link">{{name}}</h5>
                         <div>
-                            <p><span class="main-page-link">{{Description}}</span><span>&nbsp;|&nbsp;</span><a href="{{caturl}}"><small class="main-page-link-sub">{{cat}}</small></p></a></p>
+                            <p><span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span><span>&nbsp;|&nbsp;</span><a href="{{caturl}}"><small class="main-page-link-sub">{{tag}}</small></a></p>
                         </div>
                     </div>
                 </div>
