--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -6,8 +6,8 @@
     <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
         <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
             <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
-            <span class="float-right main-page-jumbo-title">
-                <span class="main-page-link">
+            <span class="float-right main-page-jumbo-title d-flex flex-column">
+                <span class="main-page-link text-right">
                     {{jumbotitle}}
                 </span>
                 <span class="br text-right main-page-link main-page-sub-card-text">
