--- a/templates/mainpage/subjumbo/subjumbolist.mustache
+++ b/templates/mainpage/subjumbo/subjumbolist.mustache
@@ -1,5 +1,7 @@
-<h4 class="text-center main-page-section-title pt-2 px-0 main-page-link">{{sectiontitle}}</h4>
-<ul class="list-group" style="border-style: none;">
+<h4 class="text-center main-page-section-title pt-2 px-0 main-page-link">
+    <a class="section_title main-page-link" href="{{{sectionurl}}}">{{sectiontitle}}</a>
+</h4>
+<ul class="list-group mx-0" style="border-style: none;">
     {{#content}}
         {{#first}}
             {{> theme_apoa/mainpage/subjumbo/subjumbolistitemtop}}
@@ -11,7 +13,9 @@
     <li class="list-group-item p-0 main-page-sub-list-group-item">
         <div class="card p-0" style="border-style: none;">
             <div class="card-body pb-0 pt-2">
-                <p class="mb-1 main-page-link main-page-more-link">{{sectionmore}}</p>
+                <p class="mb-1">
+                <a class="main-page-link main-page-more-link" href="{{{sectionurl}}}">{{sectionmore}}</a>
+                </p>
             </div>
         </div>
     </li>
