--- a/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
@@ -3,7 +3,7 @@
         <div class="card-img-overlay text-white no-border-radius">
             <h4 class="main-page-link">{{itemtitle}}</h4>
             <div>
-                <p><span class="main-page-link">{{itemdescription}}</span><span>&nbsp;|&nbsp;</span><small class="main-page-link-sub">{{itemcat}}</small></p>
+                <p class="small"><span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white"href="{{itemcaturl}}">{{itemcat}}</a></small></p>
             </div>
         </div>
     </div>
