--- a/templates/mainpage/subjumbo/subjumbolistitemwide.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwide.mustache
@@ -6,6 +6,7 @@
                 <div class="journal-sub-card-text-cont">
                     <p class="mb-2 journal-card-text">
                     <span class="journal-sub-card-authors main-page-link main-page-sub-card-text main-page-sub-card-text">{{itemauthors}}</span>
+                    <span><a class="main-page-link-sub"href="{{itemrooturl}}">{{itemroot}}</a></span>
                     <span>&nbsp;|&nbsp;<small class="text-muted main-page-link-sub">{{itemcat}}</small></span>
                     </p>
                     <span class="float-right main-page-link-sub" href="#accordion-2 .item-{{itemindex}}" data-toggle="collapse" aria-controls="#accordion-2 .item-{{itemindex}}" aria-expanded="true">Show Abstract</span>
