--- a/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
@@ -4,7 +4,9 @@
             <div class="card-img-overlay justify-content-end align-items-start align-content-end text-white flex-column d-flex">
                 <h5 class="journal-card-title main-page-link"><br>{{itemtitle}}<br><br></h5>
                 <div class="w-100">
-                    <p><span class="main-page-link" style="font-size: 14px;">{{itemauthors}}</span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
+                    <p><span class="main-page-link" style="font-size: 14px;">{{itemauthors}}</span>
+                    <span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span>
+                    <span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
                     <h6 class="text-right main-page-link-sub float-right" href="#accordion-2 .item-1" data-toggle="collapse" aria-expanded="true" aria-controls="#accordion-2 .item-1">Show Abstract</h6>
                 </div>
             </div>
