--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -56,13 +56,13 @@
     }
 }}
 <nav class="navbar fixed-top navbar-light bg-white navbar-expand" aria-label="{{#str}}sitemenubar, admin{{/str}}">
-    <div class="cpl-12">
+
     <button class="navbar-toggler aabtn d-block d-md-none px-1 my-1 border-0" data-toggler="drawers" data-action="toggle" data-target="theme_boost-drawers-primary">
         <span class="navbar-toggler-icon"></span>
         <span class="sr-only">{{#str}}sidepanel, core{{/str}}</span>
     </button>
 
-    <a href="{{{ config.homeurl }}}" class="navbar-brand d-none d-md-flex align-items-center m-0 mr-4 p-0 aabtn">
+    <a href="{{{ config.homeurl }}}" class="navbar-brand d-none d-sm-flex align-items-center m-0 mr-4 p-0 aabtn">
 
         {{# output.should_display_navbar_logo }}
             <img src="{{output.get_compact_logo_url}}" class="logo mr-1" alt="{{sitename}}">
@@ -71,8 +71,9 @@
             {{{ sitename }}}
         {{/ output.should_display_navbar_logo }}
     </a>
-    </div>
-    <div class="col-12">
+    <a href="{{{ config.homeurl }}}" class="navbar-brand d-flex d-sm-none align-items-center m-0 mr-4 p-0 aabtn">
+           <h6 class=site-name> {{{ sitename }}} </h6>
+    </a>
     {{#primarymoremenu}}
         <div class="primary-navigation">
             {{> core/moremenu}}
@@ -83,7 +84,7 @@
         <!-- page_heading_menu -->
         {{{ output.page_heading_menu }}}
     </ul>
-    </div>
+
     <div id="usernavigation" class="navbar-nav ml-auto">
         {{# output.search_box }}
             {{{ output.search_box }}}
@@ -96,7 +97,7 @@
         {{{ output.navbar_plugin_output }}}
         <div class="d-flex align-items-stretch usermenu-container" data-region="usermenu">
             {{#usermenu}}
-                {{> core/user_menu }}
+                {{> theme_apoa/user_menu }}
             {{/usermenu}}
         </div>
         {{{ output.edit_switch }}}
