--- a/templates/mainpage/subjumbo/subjumbolist.mustache
+++ b/templates/mainpage/subjumbo/subjumbolist.mustache
@@ -1,4 +1,4 @@
-<h4 class="text-center main-page-section-title pt-2 px-0 main-page-link">
+<h4 class="text-center main-page-section-title pt-2 p-1 px-0 main-page-link">
     <a class="section_title main-page-link" href="{{{sectionurl}}}">{{sectiontitle}}</a>
 </h4>
 <ul class="list-group mx-0" style="border-style: none;">
