--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -91,6 +91,11 @@
     padding-bottom: 10px;
   }
   
+  .category-description{
+    padding-top: 0px!important;
+    padding-bottom: 0px !important;
+  }
+
   @media (min-width: 768px) {
     .main-page-col {
       padding-left: 0px;
@@ -237,6 +242,7 @@
   
   .journal-card {
     font-size: small;
+    border: none;
   }
   
   .journal-card-title {
@@ -472,7 +478,7 @@
   
   .main-page-link-wrapper:hover + .card .main-page-link {
     color: var(--secondary)!important;
-    text-decoration: underline;
+    //text-decoration: underline;
   }
   
   .main-page-link-wrapper:hover .main-page-link-wrapper {
@@ -642,11 +648,11 @@
   }
   
   .main-page-jumbo-logo {
-    width: 200px;
+    height: 100px;
   }
   
   .main-page-jumbo-logo {
-    display: none;
+    display: block;
   }
   
   @media (min-width: 576px) {
@@ -657,21 +663,10 @@
   
   @media (min-width: 768px) {
     .main-page-jumbo-logo {
-      width: 220px;
+      height: 100px;
     }
   }
-  
-  @media (min-width: 1200px) {
-    .main-page-jumbo-logo {
-      width: 300px;
-    }
-  }
-  
-  @media (min-width: 1400px) {
-    .main-page-jumbo-logo {
-      width: 350px;
-    }
-  }
+
 
   .main-page-section-top-border {
     border-top-style: solid;
@@ -736,12 +731,21 @@
     line-height: 35px;
   }
 
+  .main-page-jumbo-title-logo-text  {
+    display: none;
+  }
+
+
   @media (min-width: 576px){
-    .main-page-jumbo-title-cont {
-      justify-content: space-between!important;
+    .main-page-jumbo-title-logo-text {
+      display: block!important;
     }
   }
   
+  .main-page-jumbo-title-cont {
+    justify-content: space-between!important;
+  }
+
   .main-page-jumbo-text {
     color: white;
   }
@@ -897,3 +901,22 @@
     text-align: right!important;
   }
 
+  .main-page-pill.active{
+    background-color: var(--primary)!important;
+  }
+
+  .main-page-pill{
+    border-radius: 0px!important;
+    margin: 0!important;
+
+  }
+
+  .main-page-pill:focus{
+    box-shadow:none!important;
+  }
+
+  .card-text-over-picture{
+    background-color: $accent;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+  }
