--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -5,8 +5,14 @@
     </video>
     <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
         <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
-            <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
-            <span class="float-right main-page-jumbo-title d-flex flex-column">
+            <p class="d-flex align-items-center w-100 text-white">
+                <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
+                <span class="main-page-sub-card-text px-2 main-page-jumbo-title-logo-text ">
+                        Asia Pacific Othopaedic Association
+                        {{{ sitename }}}
+                </span>
+            </p>
+            <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
                 <span class="main-page-link text-right">
                     {{jumbotitle}}
                 </span>
