--- a/templates/mainpage/subjumbo/subjumbolistwide.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistwide.mustache
@@ -1,7 +1,7 @@
 <h4 class="text-center main-page-section-title pt-2 p-1 px-0">
     <a class="section_title main-page-link" href="{{sectionurl}}">{{sectiontitle}}</a>
 </h4>
-<div class="row">
+<div class="row w-100">
     {{#subcategories}}
             <div class="col-4">
                 {{> theme_apoa/mainpage/subjumbo/subjumbolistitemwidecats}}
